--- a/now.json
+++ b/now.json
@@ -4,10 +4,8 @@
   "version": 2,
   "functions": {
     "api/**": {
-      "memory": 3008
+      "memory": 1024
     }
   },
-  "rewrites": [
-    { "source": "/(.+)", "destination": "/api" }
-  ]
+  "rewrites": [{ "source": "/(.+)", "destination": "/api" }]
 }
